--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,5 +23,10 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "swiper": "^9.4.1"
-  }
+  },
+  "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
+  "version": "1.0.0",
+  "main": "nuxt.config.js",
+  "author": "",
+  "license": "ISC"
 }
