big push using nuxt build and adding home single

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "nuxt-app",
   "private": true,
   "scripts": {
-    "start": "node static-server.js",
-    "build": "nuxt generate",
+    "start": "node ./output/server/index.mjs",
+    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
