--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "swiper": "^9.4.1"
