--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,14 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.3",
     "axios": "^1.4.0",
     "gsap": "^3.12.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "vue-select": "^4.0.0-beta.6"
   },
   "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
   "version": "1.0.0",
