--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.5.5",
+    "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
@@ -25,6 +26,8 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "axios": "^1.4.0",
+    "graphql": "^16.7.1",
+    "graphql-tag": "^2.12.6",
     "gsap": "^3.12.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
