--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
     "axios": "^1.4.0",
@@ -30,6 +31,7 @@
     "graphql-tag": "^2.12.6",
     "gsap": "^3.12.2",
     "hls.js": "^1.4.10",
+    "pinia": "^2.1.6",
     "plyr": "^3.7.8",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
