--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
     "express": "^4.18.2",
-    "nuxt": "^3.5.3",
+    "nuxt": "^3.8.0",
+    "nuxt-schema-org": "^3.0.1",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
