--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "^0.5.5",
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
     "express": "^4.18.2",
